// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StackedBarRechart Should render horizontal stacked bar chart correctly 1`] = `
<ResponsiveContainer
  debounce={0}
  height="100%"
  width="100%"
>
  <BarChart
    barCategoryGap="10%"
    barGap={4}
    data={
      Array [
        Object {
          "d_bam": 55,
          "d_bam_fill": "yellow",
          "d_bar": 15,
          "d_bar_fill": "green",
          "d_baz": 5,
          "d_baz_fill": "blue",
          "d_foo": 25,
          "d_foo_fill": "red",
          "info": "bam",
          "name": "a",
          "value": 55,
        },
      ]
    }
    layout="vertical"
    margin={
      Object {
        "bottom": 5,
        "left": 5,
        "right": 5,
        "top": 5,
      }
    }
    stackOffset="none"
  >
    <XAxis
      allowDataOverflow={false}
      allowDecimals={true}
      axisLine={false}
      domain={
        Array [
          0,
          "auto",
        ]
      }
      height={30}
      hide={true}
      mirror={false}
      orientation="bottom"
      padding={
        Object {
          "left": 0,
          "right": 0,
        }
      }
      reversed={false}
      scale="auto"
      tick={false}
      tickCount={5}
      tickLine={false}
      type="number"
      width={0}
      xAxisId={0}
    />
    <YAxis
      allowDataOverflow={false}
      allowDecimals={true}
      axisLine={false}
      dataKey="name"
      domain={
        Array [
          0,
          "auto",
        ]
      }
      height={0}
      hide={false}
      interval={0}
      mirror={false}
      orientation="left"
      padding={
        Object {
          "bottom": 0,
          "top": 0,
        }
      }
      reversed={false}
      scale="auto"
      tick={
        Object {
          "fontSize": 11,
          "width": 150,
        }
      }
      tickCount={5}
      tickLine={false}
      type="category"
      width={120}
      yAxisId={0}
    />
    <Bar
      animationBegin={0}
      animationDuration={500}
      animationEasing="ease"
      barSize={30}
      data={Array []}
      dataKey="d_foo"
      fill="red"
      hide={false}
      isAnimationActive={true}
      label={[Function]}
      layout="vertical"
      legendType="rect"
      maxBarSize={30}
      minPointSize={0}
      onAnimationEnd={[Function]}
      onAnimationStart={[Function]}
      stackId="stack"
      xAxisId={0}
      yAxisId={0}
    >
      <Cell
        fill="red"
      />
    </Bar>
    <Bar
      animationBegin={0}
      animationDuration={500}
      animationEasing="ease"
      barSize={30}
      data={Array []}
      dataKey="d_bar"
      fill="green"
      hide={false}
      isAnimationActive={true}
      label={[Function]}
      layout="vertical"
      legendType="rect"
      maxBarSize={30}
      minPointSize={0}
      onAnimationEnd={[Function]}
      onAnimationStart={[Function]}
      stackId="stack"
      xAxisId={0}
      yAxisId={0}
    >
      <Cell
        fill="green"
      />
    </Bar>
    <Bar
      animationBegin={0}
      animationDuration={500}
      animationEasing="ease"
      barSize={30}
      data={Array []}
      dataKey="d_baz"
      fill="blue"
      hide={false}
      isAnimationActive={true}
      label={[Function]}
      layout="vertical"
      legendType="rect"
      maxBarSize={30}
      minPointSize={0}
      onAnimationEnd={[Function]}
      onAnimationStart={[Function]}
      stackId="stack"
      xAxisId={0}
      yAxisId={0}
    >
      <Cell
        fill="blue"
      />
    </Bar>
    <Bar
      animationBegin={0}
      animationDuration={500}
      animationEasing="ease"
      barSize={30}
      data={Array []}
      dataKey="d_bam"
      fill="yellow"
      hide={false}
      isAnimationActive={true}
      label={[Function]}
      layout="vertical"
      legendType="rect"
      maxBarSize={30}
      minPointSize={0}
      onAnimationEnd={[Function]}
      onAnimationStart={[Function]}
      stackId="stack"
      xAxisId={0}
      yAxisId={0}
    >
      <Cell
        fill="yellow"
      />
    </Bar>
  </BarChart>
</ResponsiveContainer>
`;

exports[`StackedBarRechart Should render stacked bar chart axis correctly 1`] = `
<ResponsiveContainer
  debounce={0}
  height="100%"
  width="100%"
>
  <BarChart
    barCategoryGap="10%"
    barGap={4}
    data={
      Array [
        Object {
          "d_bam": 55,
          "d_bam_fill": "yellow",
          "d_bar": 15,
          "d_bar_fill": "green",
          "d_baz": 5,
          "d_baz_fill": "blue",
          "d_foo": 25,
          "d_foo_fill": "red",
          "info": "bam",
          "name": "a",
          "value": 55,
        },
      ]
    }
    layout="horizontal"
    margin={
      Object {
        "bottom": 5,
        "left": 5,
        "right": 5,
        "top": 5,
      }
    }
    stackOffset="none"
  >
    <XAxis
      allowDataOverflow={false}
      allowDecimals={true}
      axisLine={true}
      dataKey="name"
      domain={
        Array [
          0,
          "auto",
        ]
      }
      height={30}
      hide={false}
      interval={0}
      mirror={false}
      orientation="bottom"
      padding={
        Object {
          "left": 0,
          "right": 0,
        }
      }
      reversed={false}
      scale="auto"
      tick={
        Object {
          "fontSize": 11,
          "width": 150,
        }
      }
      tickCount={5}
      tickLine={false}
      type="category"
      width={0}
      xAxisId={0}
    />
    <YAxis
      allowDataOverflow={false}
      allowDecimals={true}
      axisLine={false}
      domain={
        Array [
          "dataMin",
          "dataMax + 10",
        ]
      }
      height={0}
      hide={true}
      mirror={false}
      orientation="left"
      padding={
        Object {
          "bottom": 0,
          "top": 0,
        }
      }
      reversed={false}
      scale="auto"
      tick={false}
      tickCount={5}
      tickLine={false}
      type="number"
      width={60}
      yAxisId={0}
    />
    <Bar
      animationBegin={0}
      animationDuration={500}
      animationEasing="ease"
      barSize={30}
      data={Array []}
      dataKey="d_foo"
      fill="red"
      hide={false}
      isAnimationActive={true}
      label={[Function]}
      layout="vertical"
      legendType="rect"
      maxBarSize={30}
      minPointSize={0}
      onAnimationEnd={[Function]}
      onAnimationStart={[Function]}
      stackId="stack"
      xAxisId={0}
      yAxisId={0}
    >
      <Cell
        fill="red"
      />
    </Bar>
    <Bar
      animationBegin={0}
      animationDuration={500}
      animationEasing="ease"
      barSize={30}
      data={Array []}
      dataKey="d_bar"
      fill="green"
      hide={false}
      isAnimationActive={true}
      label={[Function]}
      layout="vertical"
      legendType="rect"
      maxBarSize={30}
      minPointSize={0}
      onAnimationEnd={[Function]}
      onAnimationStart={[Function]}
      stackId="stack"
      xAxisId={0}
      yAxisId={0}
    >
      <Cell
        fill="green"
      />
    </Bar>
    <Bar
      animationBegin={0}
      animationDuration={500}
      animationEasing="ease"
      barSize={30}
      data={Array []}
      dataKey="d_baz"
      fill="blue"
      hide={false}
      isAnimationActive={true}
      label={[Function]}
      layout="vertical"
      legendType="rect"
      maxBarSize={30}
      minPointSize={0}
      onAnimationEnd={[Function]}
      onAnimationStart={[Function]}
      stackId="stack"
      xAxisId={0}
      yAxisId={0}
    >
      <Cell
        fill="blue"
      />
    </Bar>
    <Bar
      animationBegin={0}
      animationDuration={500}
      animationEasing="ease"
      barSize={30}
      data={Array []}
      dataKey="d_bam"
      fill="yellow"
      hide={false}
      isAnimationActive={true}
      label={[Function]}
      layout="vertical"
      legendType="rect"
      maxBarSize={30}
      minPointSize={0}
      onAnimationEnd={[Function]}
      onAnimationStart={[Function]}
      stackId="stack"
      xAxisId={0}
      yAxisId={0}
    >
      <Cell
        fill="yellow"
      />
    </Bar>
  </BarChart>
</ResponsiveContainer>
`;

exports[`StackedBarRechart Should render stacked bar chart axis correctly 2`] = `
<ResponsiveContainer
  debounce={0}
  height="100%"
  width="100%"
>
  <BarChart
    barCategoryGap="10%"
    barGap={4}
    data={
      Array [
        Object {
          "d_bam": 55,
          "d_bam_fill": "yellow",
          "d_bar": 15,
          "d_bar_fill": "green",
          "d_baz": 5,
          "d_baz_fill": "blue",
          "d_foo": 25,
          "d_foo_fill": "red",
          "info": "bam",
          "name": "a",
          "value": 55,
        },
      ]
    }
    layout="vertical"
    margin={
      Object {
        "bottom": 5,
        "left": 5,
        "right": 5,
        "top": 5,
      }
    }
    stackOffset="none"
  >
    <XAxis
      allowDataOverflow={false}
      allowDecimals={true}
      axisLine={false}
      domain={
        Array [
          0,
          "auto",
        ]
      }
      height={30}
      hide={true}
      mirror={false}
      orientation="bottom"
      padding={
        Object {
          "left": 0,
          "right": 0,
        }
      }
      reversed={false}
      scale="auto"
      tick={false}
      tickCount={5}
      tickLine={false}
      type="number"
      width={0}
      xAxisId={0}
    />
    <YAxis
      allowDataOverflow={false}
      allowDecimals={true}
      axisLine={true}
      dataKey="name"
      domain={
        Array [
          0,
          "auto",
        ]
      }
      height={0}
      hide={false}
      interval={0}
      mirror={false}
      orientation="left"
      padding={
        Object {
          "bottom": 0,
          "top": 0,
        }
      }
      reversed={false}
      scale="auto"
      tick={
        Object {
          "fontSize": 11,
          "width": 150,
        }
      }
      tickCount={5}
      tickLine={false}
      type="category"
      width={120}
      yAxisId={0}
    />
    <Bar
      animationBegin={0}
      animationDuration={500}
      animationEasing="ease"
      barSize={30}
      data={Array []}
      dataKey="d_foo"
      fill="red"
      hide={false}
      isAnimationActive={true}
      label={[Function]}
      layout="vertical"
      legendType="rect"
      maxBarSize={30}
      minPointSize={0}
      onAnimationEnd={[Function]}
      onAnimationStart={[Function]}
      stackId="stack"
      xAxisId={0}
      yAxisId={0}
    >
      <Cell
        fill="red"
      />
    </Bar>
    <Bar
      animationBegin={0}
      animationDuration={500}
      animationEasing="ease"
      barSize={30}
      data={Array []}
      dataKey="d_bar"
      fill="green"
      hide={false}
      isAnimationActive={true}
      label={[Function]}
      layout="vertical"
      legendType="rect"
      maxBarSize={30}
      minPointSize={0}
      onAnimationEnd={[Function]}
      onAnimationStart={[Function]}
      stackId="stack"
      xAxisId={0}
      yAxisId={0}
    >
      <Cell
        fill="green"
      />
    </Bar>
    <Bar
      animationBegin={0}
      animationDuration={500}
      animationEasing="ease"
      barSize={30}
      data={Array []}
      dataKey="d_baz"
      fill="blue"
      hide={false}
      isAnimationActive={true}
      label={[Function]}
      layout="vertical"
      legendType="rect"
      maxBarSize={30}
      minPointSize={0}
      onAnimationEnd={[Function]}
      onAnimationStart={[Function]}
      stackId="stack"
      xAxisId={0}
      yAxisId={0}
    >
      <Cell
        fill="blue"
      />
    </Bar>
    <Bar
      animationBegin={0}
      animationDuration={500}
      animationEasing="ease"
      barSize={30}
      data={Array []}
      dataKey="d_bam"
      fill="yellow"
      hide={false}
      isAnimationActive={true}
      label={[Function]}
      layout="vertical"
      legendType="rect"
      maxBarSize={30}
      minPointSize={0}
      onAnimationEnd={[Function]}
      onAnimationStart={[Function]}
      stackId="stack"
      xAxisId={0}
      yAxisId={0}
    >
      <Cell
        fill="yellow"
      />
    </Bar>
  </BarChart>
</ResponsiveContainer>
`;

exports[`StackedBarRechart Should render stacked bar chart axis ticks correctly 1`] = `
<ResponsiveContainer
  debounce={0}
  height="100%"
  width="100%"
>
  <BarChart
    barCategoryGap="10%"
    barGap={4}
    data={
      Array [
        Object {
          "d_bam": 55,
          "d_bam_fill": "yellow",
          "d_bar": 15,
          "d_bar_fill": "green",
          "d_baz": 5,
          "d_baz_fill": "blue",
          "d_foo": 25,
          "d_foo_fill": "red",
          "info": "bam",
          "name": "a",
          "value": 55,
        },
      ]
    }
    layout="horizontal"
    margin={
      Object {
        "bottom": 5,
        "left": 5,
        "right": 5,
        "top": 5,
      }
    }
    stackOffset="none"
  >
    <XAxis
      allowDataOverflow={false}
      allowDecimals={true}
      axisLine={false}
      dataKey="name"
      domain={
        Array [
          0,
          "auto",
        ]
      }
      height={30}
      hide={false}
      interval={0}
      mirror={false}
      orientation="bottom"
      padding={
        Object {
          "left": 0,
          "right": 0,
        }
      }
      reversed={false}
      scale="auto"
      tick={
        Object {
          "fontSize": 11,
          "width": 150,
        }
      }
      tickCount={5}
      tickLine={false}
      type="category"
      width={0}
      xAxisId={0}
    />
    <YAxis
      allowDataOverflow={false}
      allowDecimals={true}
      axisLine={false}
      domain={
        Array [
          "dataMin",
          "dataMax + 10",
        ]
      }
      height={0}
      hide={true}
      mirror={false}
      orientation="left"
      padding={
        Object {
          "bottom": 0,
          "top": 0,
        }
      }
      reversed={false}
      scale="auto"
      tick={false}
      tickCount={5}
      tickLine={false}
      type="number"
      width={60}
      yAxisId={0}
    />
    <Bar
      animationBegin={0}
      animationDuration={500}
      animationEasing="ease"
      barSize={30}
      data={Array []}
      dataKey="d_foo"
      fill="red"
      hide={false}
      isAnimationActive={true}
      label={[Function]}
      layout="vertical"
      legendType="rect"
      maxBarSize={30}
      minPointSize={0}
      onAnimationEnd={[Function]}
      onAnimationStart={[Function]}
      stackId="stack"
      xAxisId={0}
      yAxisId={0}
    >
      <Cell
        fill="red"
      />
    </Bar>
    <Bar
      animationBegin={0}
      animationDuration={500}
      animationEasing="ease"
      barSize={30}
      data={Array []}
      dataKey="d_bar"
      fill="green"
      hide={false}
      isAnimationActive={true}
      label={[Function]}
      layout="vertical"
      legendType="rect"
      maxBarSize={30}
      minPointSize={0}
      onAnimationEnd={[Function]}
      onAnimationStart={[Function]}
      stackId="stack"
      xAxisId={0}
      yAxisId={0}
    >
      <Cell
        fill="green"
      />
    </Bar>
    <Bar
      animationBegin={0}
      animationDuration={500}
      animationEasing="ease"
      barSize={30}
      data={Array []}
      dataKey="d_baz"
      fill="blue"
      hide={false}
      isAnimationActive={true}
      label={[Function]}
      layout="vertical"
      legendType="rect"
      maxBarSize={30}
      minPointSize={0}
      onAnimationEnd={[Function]}
      onAnimationStart={[Function]}
      stackId="stack"
      xAxisId={0}
      yAxisId={0}
    >
      <Cell
        fill="blue"
      />
    </Bar>
    <Bar
      animationBegin={0}
      animationDuration={500}
      animationEasing="ease"
      barSize={30}
      data={Array []}
      dataKey="d_bam"
      fill="yellow"
      hide={false}
      isAnimationActive={true}
      label={[Function]}
      layout="vertical"
      legendType="rect"
      maxBarSize={30}
      minPointSize={0}
      onAnimationEnd={[Function]}
      onAnimationStart={[Function]}
      stackId="stack"
      xAxisId={0}
      yAxisId={0}
    >
      <Cell
        fill="yellow"
      />
    </Bar>
  </BarChart>
</ResponsiveContainer>
`;

exports[`StackedBarRechart Should render stacked bar chart axis ticks correctly 2`] = `
<ResponsiveContainer
  debounce={0}
  height="100%"
  width="100%"
>
  <BarChart
    barCategoryGap="10%"
    barGap={4}
    data={
      Array [
        Object {
          "d_bam": 55,
          "d_bam_fill": "yellow",
          "d_bar": 15,
          "d_bar_fill": "green",
          "d_baz": 5,
          "d_baz_fill": "blue",
          "d_foo": 25,
          "d_foo_fill": "red",
          "info": "bam",
          "name": "a",
          "value": 55,
        },
      ]
    }
    layout="vertical"
    margin={
      Object {
        "bottom": 5,
        "left": 5,
        "right": 5,
        "top": 5,
      }
    }
    stackOffset="none"
  >
    <XAxis
      allowDataOverflow={false}
      allowDecimals={true}
      axisLine={false}
      domain={
        Array [
          0,
          "auto",
        ]
      }
      height={30}
      hide={true}
      mirror={false}
      orientation="bottom"
      padding={
        Object {
          "left": 0,
          "right": 0,
        }
      }
      reversed={false}
      scale="auto"
      tick={false}
      tickCount={5}
      tickLine={false}
      type="number"
      width={0}
      xAxisId={0}
    />
    <YAxis
      allowDataOverflow={false}
      allowDecimals={true}
      axisLine={false}
      dataKey="name"
      domain={
        Array [
          0,
          "auto",
        ]
      }
      height={0}
      hide={false}
      interval={0}
      mirror={false}
      orientation="right"
      padding={
        Object {
          "bottom": 0,
          "top": 0,
        }
      }
      reversed={false}
      scale="auto"
      tick={
        Object {
          "fontSize": 11,
          "width": 150,
        }
      }
      tickCount={5}
      tickLine={false}
      type="category"
      width={120}
      yAxisId={0}
    />
    <Bar
      animationBegin={0}
      animationDuration={500}
      animationEasing="ease"
      barSize={30}
      data={Array []}
      dataKey="d_foo"
      fill="red"
      hide={false}
      isAnimationActive={true}
      label={[Function]}
      layout="vertical"
      legendType="rect"
      maxBarSize={30}
      minPointSize={0}
      onAnimationEnd={[Function]}
      onAnimationStart={[Function]}
      stackId="stack"
      xAxisId={0}
      yAxisId={0}
    >
      <Cell
        fill="red"
      />
    </Bar>
    <Bar
      animationBegin={0}
      animationDuration={500}
      animationEasing="ease"
      barSize={30}
      data={Array []}
      dataKey="d_bar"
      fill="green"
      hide={false}
      isAnimationActive={true}
      label={[Function]}
      layout="vertical"
      legendType="rect"
      maxBarSize={30}
      minPointSize={0}
      onAnimationEnd={[Function]}
      onAnimationStart={[Function]}
      stackId="stack"
      xAxisId={0}
      yAxisId={0}
    >
      <Cell
        fill="green"
      />
    </Bar>
    <Bar
      animationBegin={0}
      animationDuration={500}
      animationEasing="ease"
      barSize={30}
      data={Array []}
      dataKey="d_baz"
      fill="blue"
      hide={false}
      isAnimationActive={true}
      label={[Function]}
      layout="vertical"
      legendType="rect"
      maxBarSize={30}
      minPointSize={0}
      onAnimationEnd={[Function]}
      onAnimationStart={[Function]}
      stackId="stack"
      xAxisId={0}
      yAxisId={0}
    >
      <Cell
        fill="blue"
      />
    </Bar>
    <Bar
      animationBegin={0}
      animationDuration={500}
      animationEasing="ease"
      barSize={30}
      data={Array []}
      dataKey="d_bam"
      fill="yellow"
      hide={false}
      isAnimationActive={true}
      label={[Function]}
      layout="vertical"
      legendType="rect"
      maxBarSize={30}
      minPointSize={0}
      onAnimationEnd={[Function]}
      onAnimationStart={[Function]}
      stackId="stack"
      xAxisId={0}
      yAxisId={0}
    >
      <Cell
        fill="yellow"
      />
    </Bar>
  </BarChart>
</ResponsiveContainer>
`;

exports[`StackedBarRechart Should render stacked bar chart correctly 1`] = `
<ResponsiveContainer
  debounce={0}
  height="100%"
  width="100%"
>
  <BarChart
    barCategoryGap="10%"
    barGap={4}
    data={
      Array [
        Object {
          "d_bam": 55,
          "d_bam_fill": "yellow",
          "d_bar": 15,
          "d_bar_fill": "green",
          "d_baz": 5,
          "d_baz_fill": "blue",
          "d_foo": 25,
          "d_foo_fill": "red",
          "info": "bam",
          "name": "a",
          "value": 55,
        },
      ]
    }
    layout="horizontal"
    margin={
      Object {
        "bottom": 5,
        "left": 5,
        "right": 5,
        "top": 5,
      }
    }
    stackOffset="none"
  >
    <XAxis
      allowDataOverflow={false}
      allowDecimals={true}
      axisLine={false}
      dataKey="name"
      domain={
        Array [
          0,
          "auto",
        ]
      }
      height={30}
      hide={false}
      interval={0}
      mirror={false}
      orientation="bottom"
      padding={
        Object {
          "left": 0,
          "right": 0,
        }
      }
      reversed={false}
      scale="auto"
      tick={
        Object {
          "fontSize": 11,
          "width": 150,
        }
      }
      tickCount={5}
      tickLine={false}
      type="category"
      width={0}
      xAxisId={0}
    />
    <YAxis
      allowDataOverflow={false}
      allowDecimals={true}
      axisLine={false}
      domain={
        Array [
          "dataMin",
          "dataMax + 10",
        ]
      }
      height={0}
      hide={true}
      mirror={false}
      orientation="left"
      padding={
        Object {
          "bottom": 0,
          "top": 0,
        }
      }
      reversed={false}
      scale="auto"
      tick={false}
      tickCount={5}
      tickLine={false}
      type="number"
      width={60}
      yAxisId={0}
    />
    <Bar
      animationBegin={0}
      animationDuration={500}
      animationEasing="ease"
      barSize={30}
      data={Array []}
      dataKey="d_foo"
      fill="red"
      hide={false}
      isAnimationActive={true}
      label={[Function]}
      layout="vertical"
      legendType="rect"
      maxBarSize={30}
      minPointSize={0}
      onAnimationEnd={[Function]}
      onAnimationStart={[Function]}
      stackId="stack"
      xAxisId={0}
      yAxisId={0}
    >
      <Cell
        fill="red"
      />
    </Bar>
    <Bar
      animationBegin={0}
      animationDuration={500}
      animationEasing="ease"
      barSize={30}
      data={Array []}
      dataKey="d_bar"
      fill="green"
      hide={false}
      isAnimationActive={true}
      label={[Function]}
      layout="vertical"
      legendType="rect"
      maxBarSize={30}
      minPointSize={0}
      onAnimationEnd={[Function]}
      onAnimationStart={[Function]}
      stackId="stack"
      xAxisId={0}
      yAxisId={0}
    >
      <Cell
        fill="green"
      />
    </Bar>
    <Bar
      animationBegin={0}
      animationDuration={500}
      animationEasing="ease"
      barSize={30}
      data={Array []}
      dataKey="d_baz"
      fill="blue"
      hide={false}
      isAnimationActive={true}
      label={[Function]}
      layout="vertical"
      legendType="rect"
      maxBarSize={30}
      minPointSize={0}
      onAnimationEnd={[Function]}
      onAnimationStart={[Function]}
      stackId="stack"
      xAxisId={0}
      yAxisId={0}
    >
      <Cell
        fill="blue"
      />
    </Bar>
    <Bar
      animationBegin={0}
      animationDuration={500}
      animationEasing="ease"
      barSize={30}
      data={Array []}
      dataKey="d_bam"
      fill="yellow"
      hide={false}
      isAnimationActive={true}
      label={[Function]}
      layout="vertical"
      legendType="rect"
      maxBarSize={30}
      minPointSize={0}
      onAnimationEnd={[Function]}
      onAnimationStart={[Function]}
      stackId="stack"
      xAxisId={0}
      yAxisId={0}
    >
      <Cell
        fill="yellow"
      />
    </Bar>
  </BarChart>
</ResponsiveContainer>
`;

exports[`StackedBarRechart Should render stacked bar chart legend correctly 1`] = `
<ResponsiveContainer
  debounce={0}
  height="100%"
  width="100%"
>
  <BarChart
    barCategoryGap="10%"
    barGap={4}
    data={
      Array [
        Object {
          "d_bam": 55,
          "d_bam_fill": "yellow",
          "d_bar": 15,
          "d_bar_fill": "green",
          "d_baz": 5,
          "d_baz_fill": "blue",
          "d_foo": 25,
          "d_foo_fill": "red",
          "info": "bam",
          "name": "a",
          "value": 55,
        },
      ]
    }
    layout="horizontal"
    margin={
      Object {
        "bottom": 5,
        "left": 5,
        "right": 5,
        "top": 5,
      }
    }
    stackOffset="none"
  >
    <XAxis
      allowDataOverflow={false}
      allowDecimals={true}
      axisLine={false}
      dataKey="name"
      domain={
        Array [
          0,
          "auto",
        ]
      }
      height={30}
      hide={false}
      interval={0}
      mirror={false}
      orientation="bottom"
      padding={
        Object {
          "left": 0,
          "right": 0,
        }
      }
      reversed={false}
      scale="auto"
      tick={
        Object {
          "fontSize": 11,
          "width": 150,
        }
      }
      tickCount={5}
      tickLine={false}
      type="category"
      width={0}
      xAxisId={0}
    />
    <YAxis
      allowDataOverflow={false}
      allowDecimals={true}
      axisLine={false}
      domain={
        Array [
          "dataMin",
          "dataMax + 10",
        ]
      }
      height={0}
      hide={true}
      mirror={false}
      orientation="left"
      padding={
        Object {
          "bottom": 0,
          "top": 0,
        }
      }
      reversed={false}
      scale="auto"
      tick={false}
      tickCount={5}
      tickLine={false}
      type="number"
      width={60}
      yAxisId={0}
    />
    <Legend
      align="center"
      iconSize={14}
      layout="horizontal"
      verticalAlign="bottom"
    />
    <Bar
      animationBegin={0}
      animationDuration={500}
      animationEasing="ease"
      barSize={30}
      data={Array []}
      dataKey="d_foo"
      fill="red"
      hide={false}
      isAnimationActive={true}
      label={[Function]}
      layout="vertical"
      legendType="rect"
      maxBarSize={30}
      minPointSize={0}
      onAnimationEnd={[Function]}
      onAnimationStart={[Function]}
      stackId="stack"
      xAxisId={0}
      yAxisId={0}
    >
      <Cell
        fill="red"
      />
    </Bar>
    <Bar
      animationBegin={0}
      animationDuration={500}
      animationEasing="ease"
      barSize={30}
      data={Array []}
      dataKey="d_bar"
      fill="green"
      hide={false}
      isAnimationActive={true}
      label={[Function]}
      layout="vertical"
      legendType="rect"
      maxBarSize={30}
      minPointSize={0}
      onAnimationEnd={[Function]}
      onAnimationStart={[Function]}
      stackId="stack"
      xAxisId={0}
      yAxisId={0}
    >
      <Cell
        fill="green"
      />
    </Bar>
    <Bar
      animationBegin={0}
      animationDuration={500}
      animationEasing="ease"
      barSize={30}
      data={Array []}
      dataKey="d_baz"
      fill="blue"
      hide={false}
      isAnimationActive={true}
      label={[Function]}
      layout="vertical"
      legendType="rect"
      maxBarSize={30}
      minPointSize={0}
      onAnimationEnd={[Function]}
      onAnimationStart={[Function]}
      stackId="stack"
      xAxisId={0}
      yAxisId={0}
    >
      <Cell
        fill="blue"
      />
    </Bar>
    <Bar
      animationBegin={0}
      animationDuration={500}
      animationEasing="ease"
      barSize={30}
      data={Array []}
      dataKey="d_bam"
      fill="yellow"
      hide={false}
      isAnimationActive={true}
      label={[Function]}
      layout="vertical"
      legendType="rect"
      maxBarSize={30}
      minPointSize={0}
      onAnimationEnd={[Function]}
      onAnimationStart={[Function]}
      stackId="stack"
      xAxisId={0}
      yAxisId={0}
    >
      <Cell
        fill="yellow"
      />
    </Bar>
  </BarChart>
</ResponsiveContainer>
`;

exports[`StackedBarRechart Should render stacked bar chart tooltip correctly 1`] = `
<ResponsiveContainer
  debounce={0}
  height="100%"
  width="100%"
>
  <BarChart
    barCategoryGap="10%"
    barGap={4}
    data={
      Array [
        Object {
          "d_bam": 55,
          "d_bam_fill": "yellow",
          "d_bar": 15,
          "d_bar_fill": "green",
          "d_baz": 5,
          "d_baz_fill": "blue",
          "d_foo": 25,
          "d_foo_fill": "red",
          "info": "bam",
          "name": "a",
          "value": 55,
        },
      ]
    }
    layout="horizontal"
    margin={
      Object {
        "bottom": 5,
        "left": 5,
        "right": 5,
        "top": 5,
      }
    }
    stackOffset="none"
  >
    <XAxis
      allowDataOverflow={false}
      allowDecimals={true}
      axisLine={false}
      dataKey="name"
      domain={
        Array [
          0,
          "auto",
        ]
      }
      height={30}
      hide={false}
      interval={0}
      mirror={false}
      orientation="bottom"
      padding={
        Object {
          "left": 0,
          "right": 0,
        }
      }
      reversed={false}
      scale="auto"
      tick={
        Object {
          "fontSize": 11,
          "width": 150,
        }
      }
      tickCount={5}
      tickLine={false}
      type="category"
      width={0}
      xAxisId={0}
    />
    <YAxis
      allowDataOverflow={false}
      allowDecimals={true}
      axisLine={false}
      domain={
        Array [
          "dataMin",
          "dataMax + 10",
        ]
      }
      height={0}
      hide={true}
      mirror={false}
      orientation="left"
      padding={
        Object {
          "bottom": 0,
          "top": 0,
        }
      }
      reversed={false}
      scale="auto"
      tick={false}
      tickCount={5}
      tickLine={false}
      type="number"
      width={60}
      yAxisId={0}
    />
    <Tooltip
      active={false}
      animationDuration={400}
      animationEasing="ease"
      content={[Function]}
      coordinate={
        Object {
          "x": 0,
          "y": 0,
        }
      }
      cursor={true}
      cursorStyle={Object {}}
      isAnimationActive={true}
      itemSorter={[Function]}
      itemStyle={Object {}}
      labelStyle={Object {}}
      offset={10}
      separator=" : "
      viewBox={
        Object {
          "x1": 0,
          "x2": 0,
          "y1": 0,
          "y2": 0,
        }
      }
      wrapperStyle={Object {}}
    />
    <Bar
      animationBegin={0}
      animationDuration={500}
      animationEasing="ease"
      barSize={30}
      data={Array []}
      dataKey="d_foo"
      fill="red"
      hide={false}
      isAnimationActive={true}
      label={[Function]}
      layout="vertical"
      legendType="rect"
      maxBarSize={30}
      minPointSize={0}
      onAnimationEnd={[Function]}
      onAnimationStart={[Function]}
      stackId="stack"
      xAxisId={0}
      yAxisId={0}
    >
      <Cell
        fill="red"
      />
    </Bar>
    <Bar
      animationBegin={0}
      animationDuration={500}
      animationEasing="ease"
      barSize={30}
      data={Array []}
      dataKey="d_bar"
      fill="green"
      hide={false}
      isAnimationActive={true}
      label={[Function]}
      layout="vertical"
      legendType="rect"
      maxBarSize={30}
      minPointSize={0}
      onAnimationEnd={[Function]}
      onAnimationStart={[Function]}
      stackId="stack"
      xAxisId={0}
      yAxisId={0}
    >
      <Cell
        fill="green"
      />
    </Bar>
    <Bar
      animationBegin={0}
      animationDuration={500}
      animationEasing="ease"
      barSize={30}
      data={Array []}
      dataKey="d_baz"
      fill="blue"
      hide={false}
      isAnimationActive={true}
      label={[Function]}
      layout="vertical"
      legendType="rect"
      maxBarSize={30}
      minPointSize={0}
      onAnimationEnd={[Function]}
      onAnimationStart={[Function]}
      stackId="stack"
      xAxisId={0}
      yAxisId={0}
    >
      <Cell
        fill="blue"
      />
    </Bar>
    <Bar
      animationBegin={0}
      animationDuration={500}
      animationEasing="ease"
      barSize={30}
      data={Array []}
      dataKey="d_bam"
      fill="yellow"
      hide={false}
      isAnimationActive={true}
      label={[Function]}
      layout="vertical"
      legendType="rect"
      maxBarSize={30}
      minPointSize={0}
      onAnimationEnd={[Function]}
      onAnimationStart={[Function]}
      stackId="stack"
      xAxisId={0}
      yAxisId={0}
    >
      <Cell
        fill="yellow"
      />
    </Bar>
  </BarChart>
</ResponsiveContainer>
`;
